--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,27 +6,25 @@
   html {
   }
   body {
-    font-family: acumin-pro-wide, sans-serif;
-    /* @apply h-fit bg-gradient-to-tr from-gray-700 via-gray-900 to-black; */
+    @apply font-sans;
   }
   h1 {
-    font-family: mixta-pro, serif;
-    @apply mb-3 text-4xl font-serif font-black;
+    @apply mb-3 text-4xl font-serif  text-dark;
   }
   p {
-    @apply mb-3 opacity-80;
+    @apply text-dark mb-3 opacity-80 text-2xl;
   }
   section {
-    @apply py-16;
+    @apply py-12 md:py-16;
   }
 }
 
 @layer components {
   .text-hero {
-    @apply md:text-6xl lg:text-8xl;
+    @apply text-5xl sm:text-8xl;
   }
   .text-filter {
-    font-family: mixta-pro, serif;
+    font-family: bely-display-pro, serif;
     text-shadow: #fff 0px 0px 0px;
     @apply mb-3 text-transparent text-neutral-800 transition-all opacity-50 cursor-pointer md:text-6xl hover:text-white;
     text-shadow: 0 0 1px #fff, 0 0 1px #fff, 0 0 1px #fff, 0 0 1px #fff;
@@ -35,7 +33,7 @@
     @apply px-6;
   }
   .device-mockup {
-    @apply bg-black rounded-xl w-fit relative flex items-center h-fit p-4 shadow-lg rotate-3 mx-auto;
+    @apply rounded-xl w-fit relative flex items-center h-fit p-4  mx-auto bg-[url('../images/icon.png')];
   }
   #canvasWrapper {
     @apply h-[7000px];
@@ -43,10 +41,19 @@
   #canvasWrapper canvas {
     @apply inset-0 mx-auto left-0 right-0 relative w-full;
   }
+  .project-filters {
+    @apply justify-between w-full gap-2 flex sm:relative fixed z-50 bottom-0 left-0 h-20 md:h-auto bg-dark sm:bg-transparent;
+  }
+  .project-filter-pill {
+    @apply flex items-center justify-center flex-col rounded-full sm:border sm:hover:border-brown sm:border-clay pb-1 pt-0.5 px-5 tracking-wider transition text-sm text-brown duration-700 hover:bg-brown hover:text-light/80;
+  }
+  .project-filter-pill-active {
+    @apply bg-dark sm:border-dark text-light hover:bg-dark;
+  }
 }
 @layer utilities {
   .h2 {
-    font-family: mixta-pro, serif;
+    font-family: bely-display-pro, serif;
     @apply mb-4 text-3xl font-black font-serif tracking-wide text-gray-900;
   }
   .h3 {
@@ -56,6 +63,6 @@
     @apply flex gap-2 py-4;
   }
   .tag {
-    @apply rounded-md px-3 py-1 bg-dark/10 text-xs;
+    @apply rounded-md px-3 py-1 bg-dark/10 text-sm md:text-xs;
   }
 }
